<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.captureframes.SDK_FNotice">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen24"
        android:background="@drawable/sdk_pan_card_gray">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen16">

                    <TextView
                        android:id="@+id/sdkNoticeTestlifeTxtTitle"
                        style="@style/sdk_pan_title_blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sdk_pan_notice_test_life_validate_identity"
                        android:textAllCaps="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/sdkPanNoticeTestlifeSubtitle"
                        style="@style/sdk_pan_text_b2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen20"
                        android:text="@string/sdk_pan_notice_test_life_warning"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sdkNoticeTestlifeTxtTitle" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/sdkNoticeTestlifeCLTipsPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen8"
                        android:layout_marginVertical="@dimen/dimen24"
                        android:background="@drawable/sdk_pan_card_white"
                        android:elevation="@dimen/dimen12"
                        android:paddingHorizontal="@dimen/dimen8"
                        android:paddingVertical="@dimen/dimen16"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sdkPanNoticeTestlifeSubtitle"
                        app:layout_constraintVertical_bias="0">

                        <TextView
                            android:id="@+id/txtSubTitle02"
                            style="@style/sdk_pan_text_b1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAllCaps="true"
                            android:text="@string/sdk_pan_notice_test_life_tips_photo"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen20"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHeight_percent=".4"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtSubTitle02">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_pan_check" />

                                    <TextView
                                        style="@style/sdk_pan_text_b2"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="start"
                                        android:layout_marginStart="@dimen/dimen10"
                                        android:text="@string/sdk_pan_notice_test_life_good_lighting" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/dimen16"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_pan_check" />

                                    <TextView
                                        style="@style/sdk_pan_text_b2"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="start"
                                        android:layout_marginStart="@dimen/dimen10"
                                        android:text="@string/sdk_pan_notice_test_life_not_accessories" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/dimen16"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:src="@drawable/ic_pan_check" />

                                    <TextView
                                        style="@style/sdk_pan_text_b2"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="start"
                                        android:layout_marginStart="@dimen/dimen10"
                                        android:text="@string/sdk_pan_notice_test_life_plain_background" />

                                </LinearLayout>

                            </LinearLayout>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_enter"
                        style="@style/sdk_pan_btn_blue_gradient"
                        android:layout_width="match_parent"
                        android:text="@string/sdk_pan_notice_test_life_take_photo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/sdkNoticeTestlifeCLTipsPhoto"
                        app:layout_constraintVertical_bias="1" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>